Modifications so that all tests fail
