# docs/openapi.yaml
@@ -21,121 +21,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Root'
-  /api/users:
-    get:
-      tags:
-        - user
-      operationId: getUsers
-      parameters:
-        - $ref: '#/components/parameters/clientVersion'
-        - $ref: '#/components/parameters/teamName'
-        - $ref: '#/components/parameters/serviceName'
-      responses:
-        200:
-          description: A list of users
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/User'
-    post:
-      tags:
-        - user
-      operationId: createUser
-      parameters:
-        - $ref: '#/components/parameters/clientVersion'
-        - $ref: '#/components/parameters/teamName'
-        - $ref: '#/components/parameters/serviceName'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserRequest'
-      responses:
-        200:
-          description: Created user
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-  /api/users/{user_id}:
-    get:
-      tags:
-        - user
-      operationId: getUser
-      parameters:
-        - $ref: '#/components/parameters/clientVersion'
-        - $ref: '#/components/parameters/teamName'
-        - $ref: '#/components/parameters/serviceName'
-        - name: user_id
-          in: path
-          description: User Id
-          required: true
-          schema:
-            type: string
-            example: '7097bbbb-1ffa-47aa-8cb4-ad01e9e73762'
-      responses:
-        200:
-          description: A user
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-    put:
-      tags:
-        - user
-      operationId: updateUser
-      parameters:
-        - $ref: '#/components/parameters/clientVersion'
-        - $ref: '#/components/parameters/teamName'
-        - $ref: '#/components/parameters/serviceName'
-        - name: user_id
-          in: path
-          description: User Id
-          required: true
-          schema:
-            type: string
-            example: '7097bbbb-1ffa-47aa-8cb4-ad01e9e73762'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserUpdateRequest'
-      responses:
-        200:
-          description: An updated user
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-    delete:
-      tags:
-        - user
-      operationId: deleteUser
-      parameters:
-        - name: user_id
-          in: path
-          description: User Id
-          required: true
-          schema:
-            type: string
-            example: '7097bbbb-1ffa-47aa-8cb4-ad01e9e73762'
-      responses:
-        200:
-          description: An updated user
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - affected
-                properties:
-                  affected:
-                    type: number
-                    example: 1
   /healthcheck/liveness:
     get:
       tags:
