# src/controllers/user.ts
@@ -1,13 +1,7 @@
-import { Router, Request, Response } from 'express';
-import { User } from 'src/entities/user';
+import { Router } from 'express';
 
-export interface IUserService {
-    findAll(limit: number, offset: number): Promise<User[]>;
-    findOne(id: string): Promise<User>;
-    create(user: User): Promise<User>;
-    update(id: string, updatedUser: User): Promise<User>;
-    delete(id: string): Promise<number>;
-}
+// eslint-disable-next-line @typescript-eslint/no-empty-interface
+export interface IUserService {}
 
 export class UsersController {
     private readonly userService: IUserService;
@@ -15,46 +9,11 @@ export class UsersController {
     private router: Router;
 
     public constructor(userService: IUserService) {
-        this.userService = userService;
         this.router = Router();
-        this.router.get('/:id', this.getById.bind(this));
-        this.router.put('/:id', this.put.bind(this));
-        this.router.delete('/:id', this.delete.bind(this));
-        this.router.get('/', this.get.bind(this));
-        this.router.post('/', this.post.bind(this));
+        this.userService = userService;
     }
 
     getRouter() {
         return this.router;
-    }
-
-    public async get(_: Request, res: Response) {
-        const users = await this.userService.findAll(Number(_.query.limit), Number(_.query.offset));
-        return res.status(200).json(users);
-    }
-
-    public async getById(req: Request, res: Response) {
-        const { id } = req.params;
-        const user = await this.userService.findOne(id);
-        return res.status(200).json(user);
-    }
-
-    public async post(req: Request, res: Response) {
-        const newUser = req.body as User;
-        const user = await this.userService.create(newUser);
-        return res.status(200).json(user);
-    }
-
-    public async put(req: Request, res: Response) {
-        const { id } = req.params;
-        const updatedUser = req.body as User;
-        const user = await this.userService.update(id, updatedUser);
-        return res.status(200).json(user);
-    }
-
-    public async delete(req: Request, res: Response) {
-        const { id } = req.params;
-        await this.userService.delete(id);
-        return res.status(200).json({ affected: 1 });
     }
 }
